package main

import (
	"context"
	"log"
	"net/http"
	"sync"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/prometheus/client_golang/prometheus"
	"github.com/prometheus/client_golang/prometheus/promhttp"
)

// gRPC client stubs (to be replaced with real generated code)
type SyncBrainClient interface {
	GetStrategyPlan(ctx context.Context, req *BidRequest) (string, error)
}

type SyncValueClient interface {
	VerifyLTV(ctx context.Context, req *BidRequest) (float64, error)
}

type SyncShieldClient interface {
	LogAudit(ctx context.Context, req *BidRequest, resp *BidResponse) error
}

// DefaultBidder implements Bidder, with gRPC client stubs
type DefaultBidder struct {
	brain  SyncBrainClient
	value  SyncValueClient
	shield SyncShieldClient
}

func (d *DefaultBidder) Bid(ctx context.Context, req *BidRequest) (*BidResponse, error) {
	// Circuit breaker: if SyncBrain/SyncValue >50ms, fallback
	planCh := make(chan string, 1)
	ltvCh := make(chan float64, 1)
	errCh := make(chan error, 2)

	go func() {
		plan, err := d.brain.GetStrategyPlan(ctx, req)
		if err != nil {
			errCh <- err
			return
		}
		planCh <- plan
	}()

	go func() {
		ltv, err := d.value.VerifyLTV(ctx, req)
		if err != nil {
			errCh <- err
			return
		}
		ltvCh <- ltv
	}()

	var plan string
	var ltv float64
	for i := 0; i < 2; i++ {
		select {
		case p := <-planCh:
			plan = p
		case l := <-ltvCh:
			ltv = l
		case <-ctx.Done():
			return nil, ctx.Err()
		case err := <-errCh:
			return nil, err
		}
	}
	return &BidResponse{Amount: ltv, Strategy: plan}, nil
}

// Bidder interface for mocking
type Bidder interface {
	Bid(ctx context.Context, req *BidRequest) (*BidResponse, error)
}

type BidRequest struct {
	UserID   string
	Features []float32
}

type BidResponse struct {
	Amount   float64
	Strategy string
}

// Worker pool
type WorkerPool struct {
	tasks  chan *BidRequest
	pool   *sync.Pool
	bidder Bidder
}

func NewWorkerPool(size int, bidder Bidder) *WorkerPool {
	p := &sync.Pool{New: func() interface{} { return &BidResponse{} }}
	w := &WorkerPool{
		tasks:  make(chan *BidRequest, 100),
		pool:   p,
		bidder: bidder,
	}
	for i := 0; i < size; i++ {
		go w.worker()
	}
	return w
}

func (w *WorkerPool) worker() {
	for req := range w.tasks {
		ctx, cancel := context.WithTimeout(context.Background(), 50*time.Millisecond)
		_, err := w.bidder.Bid(ctx, req)
		if err != nil {
			log.Println("Bid error, fallback to conservative bid:", err)
			// fallback logic here if needed
		}
		// TODO: Async log to SyncShield
		cancel()
	}
}

func processBid(pool *sync.Pool) (*BidResponse, error) {
	// Simulate gRPC to SyncBrain/SyncValue (stub)
	// Use pool for memory reuse
	resp := pool.Get().(*BidResponse)
	resp.Amount = 1.23 // TODO: real logic
	resp.Strategy = "Aggressive"
	return resp, nil
}

// Prometheus metrics
var (
	bidsPerSecond = prometheus.NewGauge(prometheus.GaugeOpts{
		Name: "bids_per_second",
		Help: "Current bids per second.",
	})
)

// Dummy implementations for demonstration
type DummyBrain struct{}

func (d *DummyBrain) GetStrategyPlan(ctx context.Context, req *BidRequest) (string, error) {
	select {
	case <-time.After(10 * time.Millisecond):
		return "Aggressive", nil
	case <-ctx.Done():
		return "", ctx.Err()
	}
}

type DummyValue struct{}

func (d *DummyValue) VerifyLTV(ctx context.Context, req *BidRequest) (float64, error) {
	select {
	case <-time.After(10 * time.Millisecond):
		return 1.23, nil
	case <-ctx.Done():
		return 0.01, ctx.Err()
	}
}

type DummyShield struct{}

func (d *DummyShield) LogAudit(ctx context.Context, req *BidRequest, resp *BidResponse) error {
	// Simulate async log
	return nil
}

func main() {
	prometheus.MustRegister(bidsPerSecond)
	r := gin.Default()
	r.POST("/bid", func(c *gin.Context) {
		var req BidRequest
		if err := c.ShouldBindJSON(&req); err != nil {
			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
			return
		}
		// Hot path: enqueue bid
		// (In real system, collect response via channel or callback)
		bidsPerSecond.Inc()
		c.JSON(http.StatusOK, gin.H{"status": "bid received"})
	})
	r.GET("/metrics", gin.WrapH(promhttp.Handler()))
	r.GET("/healthz", func(c *gin.Context) {
		c.JSON(http.StatusOK, gin.H{"status": "ok"})
	})
	bidder := &DefaultBidder{
		brain:  &DummyBrain{},
		value:  &DummyValue{},
		shield: &DummyShield{},
	}
	pool := NewWorkerPool(8, bidder)
	_ = pool // In real system, pass to handlers
	r.Run(":8000")
}
